--- a/MyPhrasebookAndroid/res/values/strings.xml
+++ b/MyPhrasebookAndroid/res/values/strings.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MPB</string>
+    <string name="app_name">My Phrasebook</string>
 	<string name="CategorySpinTitle">Category:</string>
 	<string name="LanguageSpinTitle">Ask in:</string>
 	<string name="MyPhrasebookTitle">My Phrasebook</string>	
 	<string name="TryAgain">Try Again</string>	
-	<string name="catWords">Words</string>	
+	<string name="catWords">Words</string>
+	<string name="catUncategorized">Uncategorized Words</string>		
 	<string name="RevealAnswer">\?</string>	
 	<string name="Level1">Level 1</string>	
 	<string name="Level2">Level 2</string>	
@@ -14,6 +15,5 @@
 	<string name="Lang2">Finnish</string>	
 	<string name="LangBoth">Both</string>
 	<string name="GuessingOn">Turn Guessing On</string>
-	<string name="GuessingOff">Turn Guessing Off</string>
-		
+	<string name="GuessingOff">Turn Guessing Off</string>		
 </resources>
